# nocap

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: architecture.md  implementation_plan.md  metadata_exif.md  parallel-development-plan.md  troubleshooting.md
scripts/: tauri-dev.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  state.rs  utils.rs
src-tauri/src/commands/: mod.rs  project.rs  scanner.rs
src-tauri/src/db/: mod.rs  schema.rs
src/lib/: types.ts
src/lib/actions/: open.ts
src/lib/api/: media.ts
src/lib/components/: ContextMenu.svelte  DropdownMenu.svelte  FileTreeNode.svelte  ImageViewer.svelte  InspectorPanel.svelte  MenuList.svelte  NavigationControls.svelte  SettingsDialog.svelte  Sidebar.svelte  TitleBar.svelte  Toolbar.svelte  ViewerTopBar.svelte
src/lib/stores/: fileTree.ts  media.ts  metadata.ts  settings.ts  ui.ts  viewer.ts
src/lib/utils/: images.ts
